# sgl-bench

./: .gitignore  README.md  pyproject.toml
configs/: kimi_k25_nvfp4.yaml  nemotron_v3_ultra.yaml  nemotron_v3_ultra_nvfp4.yaml
docs/rfc/: RFC-0001.md  RFC-0002.md
docs/usage/: README.md  compare.md  config.md  driver.md  generate.md  measure.md  objective.md  run.md
gov/: config.toml
gov/adr/: ADR-0001-plain-driver-script-over-multi-agent-orchestration-for-the-arg-search.toml  ADR-0002-versioned-config-file-as-source-of-truth-lark-base-as-results-viewer-only.toml  ADR-0003-sensitivity-then-focused-grid-over-full-factorial-search.toml  ADR-0004-pareto-frontier-under-slo-over-raw-throughput-objective.toml  ADR-0005-adaptive-concurrency-sweep-for-fast-throughput-vs-interactivity-frontier-construction.toml  ADR-0006-developer-driven-opportunity-identification-over-the-ranked-frontier-no-automated-headroom-scoring.toml  ADR-0007-run-scoped-content-addressed-output-layout-human-readable-generated-config-paths.toml  ADR-0008-inspect-mode-frontier-view-for-gate-failing-configs-inspect.toml  ADR-0009-generalize-the-precision-branch-into-a-general-search-branch-keyed-by-checkpoint-hardware-and-kv-cache-precision.toml  ADR-0010-accuracy-gate-and-pareto-frontier-are-scoped-within-a-branch-never-cross-branch.toml
gov/schema/: adr.schema.json  clause.schema.json  guard.schema.json  release.schema.json  (+4 more)
scripts/: devbox_sweep.sh
tests/: test_compare.py  test_driver.py  test_generate.py  test_measure.py  test_objective.py  test_run.py  test_schema.py  test_sglang_adapter.py
(+56 files in other folders)
